recursion.lessons.recursion.tree.Tree.scala.error
Tree:12: error: unclosed character literal
		println('ok1')
                            ^Tree:14: error: unclosed character literal
		println('ok2')
                            ^